add slot service